--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "css-loader": "^7.1.2",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "file-loader": "^6.2.0",
     "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "prettier": "3.3.3",
